# EEE4022S-CR3D-Final_Thesis_Project

./: README.md
Analog Front-End Subsystem/Cosmic_Ray_Detector_PCB/: Cosmic_Ray_Detector_PCB.kicad_pcb  Cosmic_Ray_Detector_PCB.kicad_prl  Cosmic_Ray_Detector_PCB.kicad_pro  Cosmic_Ray_Detector_PCB.kicad_sch  fp-info-cache
Analog Front-End Subsystem/Cosmic_Ray_Detector_PCB/KiCad/: AFBR-S4N66P014M.bak  AFBR-S4N66P014M.dcm  AFBR-S4N66P014M.kicad_sym  AFBR-S4N66P014M.lib  AFBR-S4N66P014M.mod
Analog Front-End Subsystem/Cosmic_Ray_Detector_PCB/jlcpcb/: project.db
Analog Front-End Subsystem/LTSpice Simulations/: AFE_Sim.asc
Firmware and Data Logging Subsystem/: CR3D_20251027_101611.csv  cr3d_logger.py
Firmware and Data Logging Subsystem/ArduinoFirmware/: ArduinoFirmware.ino
Scintillator Simulation Subsystem/MATLAB Helpers and Plotting/: SiPM_Sim.m  photon_counts.csv  photon_counts_birkssweep.csv  photon_counts_energysweep.csv  photon_counts_pathlength.csv  plot_photon_counts.m
Scintillator Simulation Subsystem/MuonBar/: CMakeLists.txt
Scintillator Simulation Subsystem/MuonBar/include/: ActionInitialization.hh  DetectorConstruction.hh  EventAction.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
Scintillator Simulation Subsystem/MuonBar/macros/: batch_angles.mac  batch_energy.mac  vis_win.mac
Scintillator Simulation Subsystem/MuonBar/src/: ActionInitialization.cc  DetectorConstruction.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc  main.cc
(+12 files in other folders)
